deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  namespace: default
  name: stress-test
  annotations:
  labels:
    app: stress-test
spec:
  replicas: 10
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: stress-test
  template:
    metadata:
      labels:
        app: stress-test              
    spec:
      containers:
      - name: stress-test
        image: nginxdemos/hello
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 100m
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 128m
      restartPolicy: Always
