service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: stress-test
  labels:
    app: stress-test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: stress-test
  type: ClusterIP
