ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: stress-test-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: akimbo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: stress-test
          servicePort: 80
